tried fixed scroll bug on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
-
-#game_field{
+#game_field {
     background-color: rgb(64, 190, 14);
 }
 
-html, body {
-    margin: 0; height: 100%; overflow: hidden
+html,
+body {
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
+    touch-action: none;
 }
